@@ -1,6 +1,6 @@
 % File src/library/base/man/print.dataframe.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2008 R Core Team
+% Copyright 1995-2018 R Core Team
 % Distributed under GPL 2 or later
 
 \name{print.data.frame}
@@ -11,7 +11,7 @@
 }
 \usage{
 \method{print}{data.frame}(x, \dots, digits = NULL,
-      quote = FALSE, right = TRUE, row.names = TRUE)
+      quote = FALSE, right = TRUE, max = NULL, row.names = TRUE)
 }
 \arguments{
   \item{x}{object of class \code{data.frame}.}
@@ -22,6 +22,9 @@
     printed with surrounding quotes.}
   \item{right}{logical, indicating whether or not strings should be
     right-aligned.  The default is right-alignment.}
+  \item{max}{numeric or \code{NULL}, specifying the maximal number of
+    entries to be printed.  By default, when \code{NULL},
+    \code{\link{getOption}("max.print")} used.}
   \item{row.names}{logical (or character vector), indicating whether (or
     what) row names should be printed.}
 }
